Fix spacing issue on cast and crew h1 in details.

--- a/src/app/pages/show-detail/show-detail.component.scss
+++ b/src/app/pages/show-detail/show-detail.component.scss
@@ -60,6 +60,10 @@
   text-align: center;
 }
 
+.cast-and-crew {
+  margin-left: 1rem;
+}
+
 @media (max-width: 990px) {
   #overview-heading {
     text-align: center;
